# JustCore

./: .gitmodules  BoxPhysics.cpp  BoxPhysics.h  CMakeLists.txt  CMakeSettings.json  README.md  RenderSystem.cpp  RenderSystem.h  Renderer.cpp  Renderer.h  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TextRenderSystem.cpp  TextRenderSystem.h  TransformComponent.h  UITransformComponent.h  main.cpp
DesktopEntry/src/: CMakeLists.txt  main.cpp
JustCore/src/: BoxPhysics.cpp  BoxPhysics.h  CMakeLists.txt  SpriteRenderSystem.cpp  SpriteRenderSystem.h  TextRenderSystem.cpp  TextRenderSystem.h  TransformComponent.cpp  TransformComponent.h  game.cpp  game.h
JustCore/src/graphics/: Renderer.h
JustCore/src/util/: Vector.h
UWPEntry/: App.cpp  App.h  Package.appxmanifest  UWPEntry.vcxproj  UWPEntry.vcxproj.filters  UWPEntryMain.cpp  UWPEntryMain.h
UWPEntry/Content/: Sample3DSceneRenderer.cpp  Sample3DSceneRenderer.h  ShaderStructures.h
src/: CMakeLists.txt  TextRenderSystem.cpp  TextRenderSystem.h  UITransformComponent.cpp
src/graphics/: Renderer.cpp  Renderer.h
